Part_1/Exercise_1.09/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-application-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong-application
  template:
    metadata:
      labels:
        app: ping-pong-application
    spec:
      containers:
      - name: ping-pong-application
        image: valeriot015/ping-pong-application:latest
