Part_1/Exercise_1.09/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-service
spec:
  selector:
    app: ping-pong-application
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
